# nnzz-script

./: .gitignore  1.py  PIDController.py  activate_code_generator.py  build.py  dasha.py  encode.py  fix_all_indents.py  fix_indent_consistent.py  fix_indent_simple.py  fix_indent_utf8.py  fix_indentation.py  input.py  kmmm.py  localnet.py  main.py  main.spec  one_build.py  one_main.py  proxy.py  pyinstall.bat  pyproject.toml  sd_activate_code_generator.py  setup.py  smart_fix_indent.py  tafangrunning-1.py  tafangrunning.py  xinggang.py  yolov8.py  zhuangyuanjm.py  zhuangyuantq.py
.github/workflows/: build.yml  encode.yml  one-build.yml
.github/workspace/: build.yml
.pyarmor/: config
bak/: tafangrunning.py  tafangrunningkm.py  xinggang1.5.py  xinggang2.4.py  zhuangyuanjm.py  zhuangyuantq.py
gorun/: diagnose.go  go.mod  go.sum  launch_onemain.go  main.go  main.py  minimal_fyne.go  simple_app.go  test.go
nzscript-master/nzscript/: main.py  pyproject.toml
test/: image-zhupingm.py  win32apitets.py
